2009-06-26  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Reconstructing ZMP from log files and more.
	* unitTesting/AnalysisHum09.gnu: New.
	* unitTesting/AnalysisHum092.gnu: New.
	* unitTesting/AnalysisHum09Actual.gnu: New.
	* unitTesting/AnalysisHum09Feet.gnu: New.
	* unitTesting/AnalysisHum09Waist.gnu: New.
	* unitTesting/CMakeLists.txt: .
	* unitTesting/ComputeRealZMP.cpp: New.

2009-06-22  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fixed the computation of the inertia Matrix.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: 
	Changed m_ to listOfBodies.
	* src/DynamicMultiBody.cpp:
	Implement the modification + fixed the Inertia Matrix computation.
	

2009-06-22  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Added correct resizing of the inertia matrix.
	* src/DynamicMultiBody.cpp: cf patch.

2009-06-22  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removed wrong access to RMC fields + InertiaMatrix test..
	* src/DynamicBody.cpp: Removed access to RMC.
	* unitTesting/TestHumanoidDynamicRobot.cpp: 
	Inertia matrix test.

2009-06-19  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Added files to be ignored by git.
	* .gitignore: Ignore svn-wrapper related files + generated
	config file.

2009-06-19  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removed uncessary fields for resolved momentum and spatial notations.
	* include/dynamicsJRLJapan/DynamicBody.h: 
	Removed the fields (RMC + spatial notations).
	* src/DynamicBody.cpp: 
	Removed the fields from initialization and operator=.

2009-06-09  Nicolas Mansard

	Release 1.15.0 for sot 1.1.0.

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding a new method for optimized code in hrp2dynamics.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: 
	Adding access to inertiaMatrix.
	* src/DynamicMultiBody.cpp: .

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	License is send back to file License.txt.
	* include/dynamicsJRLJapan/Body.h: .
	* include/dynamicsJRLJapan/DynamicBody.h: .